pending files for last commit

--- a/PART/Source/CprBroker/Web/web.config
+++ b/PART/Source/CprBroker/Web/web.config
@@ -14,6 +14,7 @@
       <section name="dataProviders" type="CprBroker.Utilities.Config.DataProvidersConfigurationSection, CprBroker.Utilities" />
     </sectionGroup>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="CprBroker.Web.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="CprBroker.Config.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging" />
@@ -70,6 +71,11 @@
   <appSettings />
   <connectionStrings configSource="Config\connectionStrings.config" />
   <applicationSettings>
+    <CprBroker.Web.Properties.Settings>
+      <setting name="CprBroker_Web_localhost_Admin" serializeAs="String">
+        <value>http://localhost:1552/Services/Admin.asmx</value>
+      </setting>
+    </CprBroker.Web.Properties.Settings>
     <CprBroker.Config.Properties.Settings configSource="Config\applicationSettings.config" />
   </applicationSettings>
   <!--
