Bugfixes and code cleanup

--- a/PART/Source/EventBroker/Backend/App.config
+++ b/PART/Source/EventBroker/Backend/App.config
@@ -5,6 +5,7 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="CprBroker.Config.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="CprBroker.PartInterface.Tracking.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      <section name="CprBroker.Providers.CPRDirect.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging" />
     <sectionGroup name="dataProvidersGroup">
@@ -55,7 +56,7 @@
   </tasks>
 
   <applicationSettings>
-    <CprBroker.PartInterface.Tracking.Properties.Settings>
+    <CprBroker.Providers.CPRDirect.Properties.Settings>
       <setting name="ExcludedMunicipalityCodes" serializeAs="Xml">
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
@@ -63,6 +64,8 @@
           </ArrayOfString>
         </value>
       </setting>
+      </CprBroker.Providers.CPRDirect.Properties.Settings>
+      <CprBroker.PartInterface.Tracking.Properties.Settings>
       <setting name="MaxInactivePeriod" serializeAs="String">
         <value>90.00:00:00</value>
       </setting>
