Class filename also renamed accordingly.

--- a/PART/Source/CprBroker/DAWA/DAWA.csproj
+++ b/PART/Source/CprBroker/DAWA/DAWA.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DawaDataProvidersAdresser.cs" />
+    <Compile Include="DawaAdresser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
